--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ main {
     width: 50%;
     margin: 10px;
     padding: 10px;
-    border: 1px solid #080808;
+    border: 1px solid #FFFFFF;
     border-radius: 5px;
-    background: #e6a5a5;
+    background: #FFFFFF;
 }
 
 .produto img {
