--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ main {
     padding: 10px;
     border: 1px solid #FFFFFF;
     border-radius: 5px;
-    background: #FFFFFF;
+    background: rgb(226, 218, 218);
 }
 
 .produto img {
